Update 'lbebwr22t-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:3989817180a17807fcf85ba78b615d0c4d84fd98@sha256:77ee36b3db77a43f2862a68ae3904cc1e452cc577fe856950866210ce6deb0cc

--- a/components/lbebwr22t-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/lbebwr22t-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: lbebwr22t-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:3989817180a17807fcf85ba78b615d0c4d84fd98@sha256:77ee36b3db77a43f2862a68ae3904cc1e452cc577fe856950866210ce6deb0cc
+          name: container-image
